tests/paczka1/fuzzy1/61431172.err
Error in line 5: HwXT1K2yQT A346 48,1
Error in line 17: wbL1DiMukWW A435 37,3
Error in line 18: wbL1DiMukWW S868 43,4
Error in line 25: HwXT1K2yQT A346 0,2
Error in line 26: HwXT1K2yQT A465 80,1
Error in line 36: T8Bxk A346 39,1
